--- a/public/liked-songs.html
+++ b/public/liked-songs.html
@@ -30,6 +30,7 @@
       <img src="./assets/liked.png" alt="" class="playlist-cover">
       <h1>Liked Songs</h1>
     </div>
+    <input type="text" id="search-bar" placeholder="Search for songs..."  style="display: none;"/>
     <div id="liked-songs-container"></div>
   </div>
   <div class="audio-controls" id="audio-controls">
