--- a/public/offline.html
+++ b/public/offline.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
+
 <body>
   <div class="sidebar">
     <a href="./">
@@ -25,10 +27,9 @@
   </div>
   <div class="content">
     <h1 id="greeting"></h1>
-    <input type="text" id="search-bar" placeholder="Search for songs..." />
-    <div id="songs-container"></div>
+    <input type="text" id="search-bar" placeholder="Search for songs..." style="display: none;"/>
+    <div id="offline-songs-container"></div>
     <div id="pagination"></div>
-    <img src="" alt="" id="yourImageElementId">
   </div>
   <div class="audio-controls" id="audio-controls">
     <div class="song-info">
@@ -54,11 +55,6 @@
         <input type="range" id="progress" value="0" min="0" max="100">
       </div>
     </div>
-    <div class="right">
-      <button onclick="addToLikedSongs(${start + index})">
-        <ion-icon name="heart-outline"></ion-icon>
-      </button>
-    </div>
   </div>
   <script>
     if ('serviceWorker' in navigator) {
@@ -67,7 +63,6 @@
       });
     }
   </script>
-  <script src="./js/welcome.js"></script>
   <script src="./js/app.js"></script>
 </body>
 
