--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,12 @@
   </div>
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('./js/sw.js').then(() => {
-        console.log('Service Worker registered');
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/assets/js/sw.js').then(registration => {
+          console.log('Service Worker registered with scope:', registration.scope);
+        }).catch(error => {
+          console.error('Service Worker registration failed:', error);
+        });
       });
     }
   </script>
