--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/js/sw.js').then(registration => {
+        navigator.serviceWorker.register('/sw.js').then(registration => {
           console.log('Service Worker registered with scope:', registration.scope);
         }).catch(error => {
           console.error('Service Worker registration failed:', error);
