--- a/public/offline.html
+++ b/public/offline.html
@@ -26,7 +26,11 @@
     </a>
   </div>
   <div class="content">
-    <h1 id="greeting"></h1>
+    <h1 style="display: flex; gap: 10px; align-items: center;">
+      <ion-icon name="cloud-offline-outline"></ion-icon>
+      You are offline.
+    </h1>
+    <p>Downloaded Songs</p>
     <input type="text" id="search-bar" placeholder="Search for songs..." style="display: none;"/>
     <div id="offline-songs-container"></div>
     <div id="pagination"></div>
@@ -54,6 +58,11 @@
       <div class="progress-bar">
         <input type="range" id="progress" value="0" min="0" max="100">
       </div>
+    </div>
+    <div class="right">
+      <button onclick="addToLikedSongs(${start + index})">
+        <ion-icon name="heart-outline"></ion-icon>
+      </button>
     </div>
   </div>
   <script>
