offline mode test

--- a/public/offline.html
+++ b/public/offline.html
@@ -26,10 +26,7 @@
     </a>
   </div>
   <div class="content">
-    <h1 style="display: flex; gap: 10px; align-items: center;">
-      <ion-icon name="cloud-offline-outline"></ion-icon>
-      You are offline.
-    </h1>
+    <h1>You are offline.</h1>
     <p>Downloaded Songs</p>
     <input type="text" id="search-bar" placeholder="Search for songs..." style="display: none;"/>
     <div id="offline-songs-container"></div>
