--- a/public/offline.html
+++ b/public/offline.html
@@ -62,6 +62,7 @@
       </button>
     </div>
   </div>
+  <script>console.log('diddy')</script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
