update offline mode style

--- a/public/offline.html
+++ b/public/offline.html
@@ -222,6 +222,9 @@
                   <p class="song-artist">${song.artist}</p>
                 </div>
               </div>
+              <div class="song-item-right">
+                <ion-icon name="checkmark-circle-outline"></ion-icon>
+              </div>
             `;
 
               offlineSongsContainer.appendChild(songItem);
