--- a/public/offline.html
+++ b/public/offline.html
@@ -223,7 +223,9 @@
                 </div>
               </div>
               <div class="song-item-right">
-                <ion-icon name="checkmark-circle-outline"></ion-icon>
+                <button>
+                  <ion-icon name="checkmark-circle-outline"></ion-icon>
+                </button>
               </div>
             `;
 
