--- a/public/index.html
+++ b/public/index.html
@@ -12,18 +12,24 @@
 </head>
 <body>
   <div class="sidebar">
-    <a href="./">
-      <ion-icon name="home-outline"></ion-icon>
-      Home
+    <a href="/" class="logo">
+      <img src="./assets/favicon.png" alt="">
+      <h2>Coconut</h2>
     </a>
-    <a href="./search.html">
-      <ion-icon name="search-outline"></ion-icon>
-      Search
-    </a>
-    <a href="./liked-songs.html">
-      <ion-icon name="heart"></ion-icon>
-      Liked Songs
-    </a>
+    <div class="nav-btns">
+      <a href="./">
+        <ion-icon name="home-outline"></ion-icon>
+        Home
+      </a>
+      <a href="./search.html">
+        <ion-icon name="search-outline"></ion-icon>
+        Search
+      </a>
+      <a href="./liked-songs.html">
+        <ion-icon name="heart"></ion-icon>
+        Liked Songs
+      </a>
+    </div>
   </div>
   <div class="content">
     <h1 id="greeting"></h1>
