--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
         <ion-icon name="home-outline"></ion-icon>
         Home
       </a>
-      <a href="./search.html">
-        <ion-icon name="search-outline"></ion-icon>
-        Search
+      <a href="./upload.html">
+        <ion-icon name="cloud-upload-outline"></ion-icon>
+        Upload
       </a>
       <a href="./liked-songs.html">
         <ion-icon name="heart"></ion-icon>
