fix offline and liked songs sidebar

--- a/public/offline.html
+++ b/public/offline.html
@@ -14,18 +14,24 @@
 
 <body>
   <div class="sidebar">
-    <a href="./">
-      <ion-icon name="home-outline"></ion-icon>
-      Home
+    <a href="/" class="logo">
+      <img src="./assets/favicon.png" alt="">
+      <h2>Coconut</h2>
     </a>
-    <a href="./upload.html">
-      <ion-icon name="cloud-upload-outline"></ion-icon>
-      Upload
-    </a>
-    <a href="./liked-songs.html">
-      <ion-icon name="heart"></ion-icon>
-      Liked Songs
-    </a>
+    <div class="nav-btns">
+      <a href="./">
+        <ion-icon name="home-outline"></ion-icon>
+        Home
+      </a>
+      <a href="./upload.html">
+        <ion-icon name="cloud-upload-outline"></ion-icon>
+        Upload
+      </a>
+      <a href="./liked-songs.html">
+        <ion-icon name="heart"></ion-icon>
+        Liked Songs
+      </a>
+    </div>
   </div>
   <div class="content">
     <h1>You are offline.</h1>
